# discord-bot-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  log4rs.yml  sonar-project.properties
entity/: Cargo.toml
entity/src/: user.rs
glob_proc/: Cargo.toml
glob_proc/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221206_205815_date_triggers.rs  m20221269_206922_user_table.rs
src/: main.rs
src/command/: age.rs  help.rs  join.rs  mod.rs  play.rs
src/command/music/: join.rs  leave.rs  mod.rs  play.rs  queue.rs  shuffle.rs  skip.rs  volume.rs
src/command/questing/: mod.rs  start.rs
src/event/: mod.rs  music_event.rs
src/model/: queue.rs
src/util/: manager.rs  mod.rs  music.rs
