[package]
name = "Discord-Bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
poise = "0.5"
sea-orm = { version = "0.10", features = [
    "debug-print",
    "macros",
    "runtime-async-std-native-tls",
    "sqlx-postgres",
] }
tokio = { version = "1.22.0", features = ["full"] }
dotenvy = "0.15"
serde = "1"
serde_json = "1"
actix-web = "4"
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
regex = "1"
lazy_static = "1"
